# magicblock-validator

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE.md  Makefile  README.md  action.yml
bank/: Cargo.toml
bank/src/: bank.rs  bank_helpers.rs  bank_rc.rs  builtins.rs  lib.rs  status_cache.rs  transaction_batch.rs  transaction_logs.rs  transaction_results.rs
bank/tests/: bank.rs
geyser-grpc-proto/: Cargo.toml  build.rs
geyser-grpc-proto/src/: lib.rs
magicblock-account-cloner/: Cargo.toml  README.md
magicblock-account-cloner/src/: account_cloner.rs  account_cloner_stub.rs  remote_account_cloner_client.rs  remote_account_cloner_worker.rs
magicblock-account-cloner/tests/: remote_account_cloner.rs
magicblock-account-dumper/: Cargo.toml
magicblock-account-dumper/src/: account_dumper.rs  account_dumper_bank.rs  account_dumper_stub.rs
magicblock-accounts-api/: Cargo.toml
magicblock-accounts-api/src/: bank_account_provider.rs  internal_account_provider.rs
magicblock-accounts-db/: Cargo.toml  README.md
magicblock-accounts-db/src/: account_info.rs  account_locks.rs  accounts.rs  accounts_cache.rs  config.rs  error.rs  errors.rs  geyser.rs  index.rs  lib.rs  snapshot.rs  storage.rs  tests.rs  utils.rs  verify_accounts_hash_in_background.rs
magicblock-api/: Cargo.toml  README.md
magicblock-api/src/: accounts.rs  domain_registry_manager.rs  errors.rs  external_config.rs  fund_account.rs  geyser_transaction_notify_listener.rs  init_geyser_service.rs  ledger.rs  lib.rs  magic_validator.rs  slot.rs  tickers.rs
magicblock-bank/: Cargo.toml  README.md
magicblock-bank/src/: address_lookup_table.rs  bank.rs  bank_helpers.rs  bank_rc.rs  builtins.rs  genesis_utils.rs  get_compute_budget_details.rs  geyser.rs  lib.rs  program_loader.rs  slot_status_notifier_interface.rs  status_cache.rs  sysvar_cache.rs  transaction_logs.rs  transaction_notifier_interface.rs  transaction_results.rs
magicblock-bank/tests/: slot_advance.rs  transaction_execute.rs
magicblock-config/: Cargo.toml
magicblock-config/src/: accounts.rs  errors.rs  geyser_grpc.rs  ledger.rs  lib.rs  metrics.rs  rpc.rs  validator.rs
magicblock-config/tests/: parse_config.rs  read_config.rs
magicblock-ledger/: Cargo.toml
magicblock-ledger/src/: errors.rs  ledger_truncator.rs  lib.rs
magicblock-ledger/tests/: common.rs  get_block.rs  test_ledger_truncator.rs
magicblock-messaging/: Cargo.toml
magicblock-messaging/src/: lib.rs
magicblock-mutator/: Cargo.toml  README.md
magicblock-mutator/examples/: clone_solx_custom.rs
magicblock-mutator/src/: cluster.rs  errors.rs  fetch.rs  idl.rs  lib.rs  program.rs  transactions.rs
magicblock-mutator/tests/: clone_executables.rs  clone_non_executables.rs  utils.rs
magicblock-perf-service/: Cargo.toml
magicblock-perf-service/src/: lib.rs  service.rs  stats_snapshot.rs
magicblock-processor/: Cargo.toml  README.md
magicblock-processor/src/: batch_processor.rs  execute_transaction.rs  lib.rs  metrics.rs  token_balances.rs  utils.rs
magicblock-pubsub/: Cargo.toml  README.md
magicblock-pubsub/src/: conversions.rs  errors.rs  lib.rs  notification_builder.rs  pubsub_api.rs  pubsub_service.rs  subscription.rs  types.rs
magicblock-rpc/: Cargo.toml  README.md
magicblock-rpc/src/: account_resolver.rs  filters.rs  json_rpc_request_processor.rs  json_rpc_service.rs  perf.rs  rpc_health.rs  transaction.rs  utils.rs
magicblock-tokens/: Cargo.toml
magicblock-tokens/src/: token_balances.rs
magicblock-transaction-status/: Cargo.toml
magicblock-transaction-status/src/: lib.rs
magicblock-version/: Cargo.toml  build.rs
magicblock-version/src/: lib.rs
sleipnir-account-cloner/: Cargo.toml  README.md
sleipnir-account-cloner/src/: account_cloner.rs  account_cloner_stub.rs  lib.rs  remote_account_cloner_client.rs  remote_account_cloner_worker.rs
sleipnir-account-cloner/tests/: remote_account_cloner.rs
sleipnir-account-dumper/: Cargo.toml
sleipnir-account-dumper/src/: account_dumper.rs  account_dumper_bank.rs  account_dumper_stub.rs  lib.rs
sleipnir-account-fetcher/: Cargo.toml
sleipnir-account-fetcher/src/: account_fetcher.rs  account_fetcher_stub.rs  lib.rs  remote_account_fetcher_client.rs  remote_account_fetcher_worker.rs
sleipnir-account-fetcher/tests/: remote_account_fetcher.rs
sleipnir-account-updates/: Cargo.toml
sleipnir-account-updates/src/: account_updates.rs  account_updates_stub.rs  lib.rs  remote_account_updates_client.rs  remote_account_updates_reader.rs  remote_account_updates_shard.rs  remote_account_updates_watcher.rs  remote_account_updates_worker.rs
sleipnir-account-updates/tests/: remote_account_updates.rs
sleipnir-accounts/: Cargo.toml  README.md
sleipnir-accounts/src/: accounts_manager.rs  bank_account_provider.rs  config.rs  errors.rs  external_accounts.rs  external_accounts_manager.rs  lib.rs  remote_account_cloner.rs  remote_account_committer.rs  remote_scheduled_commits_processor.rs  traits.rs  utils.rs
sleipnir-accounts/tests/: commit_delegated.rs  ensure_accounts.rs
sleipnir-api/: Cargo.toml  README.md
sleipnir-api/src/: accounts.rs  errors.rs  exernal_config.rs  external_config.rs  fund_account.rs  geyser_transaction_notify_listener.rs  init_geyser_service.rs  ledger.rs  lib.rs  magic_validator.rs  tickers.rs
sleipnir-bank/: Cargo.toml  README.md
sleipnir-bank/src/: address_lookup_table.rs  bank.rs  bank_helpers.rs  bank_rc.rs  builtins.rs  consts.rs  genesis_utils.rs  lib.rs  status_cache.rs  sysvar_cache.rs  transaction_batch.rs  transaction_notifier_interface.rs  transaction_results.rs  transaction_simulation.rs
sleipnir-bank/tests/: bank.rs  slot_advance.rs  transaction_execute.rs
sleipnir-config/: Cargo.toml
sleipnir-config/src/: accounts.rs  errors.rs  geyser_grpc.rs  ledger.rs  lib.rs  metrics.rs  program.rs  rpc.rs  validator.rs
sleipnir-config/tests/: parse_config.rs  read_config.rs
sleipnir-geyser-plugin/: Cargo.toml  build.rs
sleipnir-geyser-plugin/src/: config.rs  filters.rs  grpc.rs  grpc_messages.rs  lib.rs  (+5 more)
sleipnir-ledger/: Cargo.toml  README.md  build.rs
(+697 files in other folders)
