[profile.release-with-debug]
inherits = "release"
debug = true
split-debuginfo = "packed"

[workspace]
members = [
  "programs/magicblock",
  "magicblock-account-cloner",
  "magicblock-account-dumper",
  "magicblock-account-fetcher",
  "magicblock-account-updates",
  "magicblock-accounts",
  "magicblock-accounts-api",
  "magicblock-accounts-db",
  "magicblock-api",
  "magicblock-bank",
  "magicblock-config",
  "magicblock-core",
  "magicblock-geyser-plugin",
  "magicblock-ledger",
  "magicblock-metrics",
  "magicblock-mutator",
  "magicblock-perf-service",
  "magicblock-processor",
  "magicblock-pubsub",
  "magicblock-rpc",
  "magicblock-tokens",
  "magicblock-transaction-status",
  "magicblock-version",
  "test-bins",
  "test-tools",
  "test-tools-core",
  "utils/expiring-hashmap",
  "tools/genx",
  "tools/keypair-base58",
  "tools/ledger-stats",
]

# This prevents a Travis CI error when building for Windows.
resolver = "2"

[workspace.package]
version = "2.1.11"                                               # matches Solana Version
authors = ["MagicBlock Maintainers <maintainers@magicblock.gg>"]
repository = "https://github.com/magicblock-labs/x-validator"
homepage = "https://www.magicblock.gg"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.86"
arrayref = "0.3.7"
assert_matches = "1.5.0"
async-trait = "0.1.77"
base64 = "0.21.7"
bincode = "1.3.3"
bs58 = "0.4.0"
byteorder = "1.5.0"
cargo-lock = "10.0.0"
expiring-hashmap = { path = "./utils/expiring-hashmap" }
conjunto-transwise = { path = "../conjunto/transwise" }
console-subscriber = "0.2.0"
crossbeam-channel = "0.5.11"
csv = "1.3.0"
eager = "0.1.0"
enum-iterator = "1.5.0"
env_logger = "0.11.2"
magicblock-delegation-program = { path = "../delegation-program" }
fd-lock = "4.0.2"
fs_extra = "1.3.0"
futures-util = "0.3.30"
# geyser-grpc-proto = { package = "yellowstone-grpc-proto", version = "4.1" }
geyser-grpc-proto = { path = "./geyser-grpc-proto" }
git-version = "0.3.9"
histogram = "0.6.9"
hostname = "0.4.0"
http-body-util = "0.1.2"
hyper = "1.4.1"
hyper-util = "0.1.9"
itertools = "0.14"
json5 = "0.4.1"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-pubsub = "18.0.0"
jsonrpc-ws-server = "18.0.0"
lazy_static = "1.4.0"
libc = "0.2.153"
libloading = "0.7.4"
libsecp256k1 = "0.6.0"
log = "0.4.20"
min-max-heap = "1.3.0"
num_cpus = "1.16.0"
num-derive = "0.4"
num-traits = "0.2"
paste = "1.0"
percentage = "0.1.0"
prio-graph = "0.2.1"
prometheus = "0.13.4"
# Needs to match https://crates.io/crates/solana-storage-bigtable/2.1.13/dependencies
prost = "0.11.9"
rand = "0.8.5"
rayon = "1.10.0"
rustc_version = "0.4"
semver = "1.0.22"
serde = "1.0.217"
serde_derive = "1.0"
serde_json = "1.0"
ledger-stats = { path = "tools/ledger-stats" }
magicblock-account-cloner = { path = "./magicblock-account-cloner" }
magicblock-account-dumper = { path = "./magicblock-account-dumper" }
magicblock-account-fetcher = { path = "./magicblock-account-fetcher" }
magicblock-account-updates = { path = "./magicblock-account-updates" }
magicblock-accounts = { path = "./magicblock-accounts" }
magicblock-accounts-api = { path = "./magicblock-accounts-api" }
magicblock-accounts-db = { path = "./magicblock-accounts-db" }
magicblock-api = { path = "./magicblock-api" }
magicblock-bank = { path = "./magicblock-bank" }
magicblock-config = { path = "./magicblock-config" }
magicblock-core = { path = "./magicblock-core" }
magicblock-geyser-plugin = { path = "./magicblock-geyser-plugin" }
magicblock-ledger = { path = "./magicblock-ledger" }
magicblock-metrics = { path = "./magicblock-metrics" }
magicblock-mutator = { path = "./magicblock-mutator" }
magicblock-perf-service = { path = "./magicblock-perf-service" }
magicblock-processor = { path = "./magicblock-processor" }
magicblock-program = { path = "./programs/magicblock" }
magicblock-pubsub = { path = "./magicblock-pubsub" }
magicblock-rpc = { path = "./magicblock-rpc" }
magicblock-rpc-sender = { path = "./magicblock-rpc-sender" }
magicblock-tokens = { path = "./magicblock-tokens" }
magicblock-transaction-status = { path = "./magicblock-transaction-status" }
magicblock-version = { path = "./magicblock-version" }
protobuf-src = "2.1.1"
solana-accounts-db = { version = "2.1.11" }
solana-account-decoder = { version = "2.1.11" }
solana-address-lookup-table-program = { version = "2.1.11" }
solana-bpf-loader-program = { version = "2.1.11" }
solana-compute-budget-program = { version = "2.1.11" }
solana-cost-model = { version = "2.1.11" }
solana-frozen-abi-macro = { version = "2.1.11" }
solana-geyser-plugin-interface = { version = "2.1.11", package = "agave-geyser-plugin-interface" }
solana-geyser-plugin-manager = { version = "2.1.11" }
solana-inline-spl = { version = "2.1.11" }
solana-loader-v4-program = { version = "2.1.11" }
solana-logger = { version = "2.1.11" }
solana-log-collector = { version = "2.1.11" }
solana-measure = { version = "2.1.11" }
solana-metrics = { version = "2.1.11" }
solana-perf = { version = "2.1.11" }
solana-program-runtime = { version = "2.1.11" }
solana-rayon-threadlimit = { version = "2.1.11" }
solana-pubsub-client = { version = "2.1.11" }
solana-rpc = "2.1.11"
solana-rpc-client = { version = "2.1.11" }
solana-rpc-client-api = { version = "2.1.11" }
solana-streamer = { version = "2.1.11" }
solana-sdk = { version = "2.1.11" }
solana-svm = { version = "2.1.11" }
solana-svm-transaction = { version = "2.1.11" }
solana-storage-proto = { path = "storage-proto" }
solana-system-program = { version = "2.1.11" }
solana-timings = "2.1.11"
solana-transaction-status = { version = "2.1.11" }
solana_rbpf = "=0.8.0"
spl-token = "=7.0"
spl-token-2022 = "=6.0"
strum = "0.24"
strum_macros = "0.24"
tempfile = "3.10.1"
test-tools = { path = "./test-tools" }
test-tools-core = { path = "./test-tools-core" }
thiserror = "1.0.57"
toml = "0.8.13"
# Update solana-tokio patch below when updating this version
tokio = "1.0"
tokio-stream = "0.1.15"
tokio-util = "0.7.10"
# Tonic version 11 conflicts with lower level deps of solana and 0.9.x is the last
# version that allows prost 0.11.x to be used
tonic = "0.9.2"
tonic-build = "0.9.2"
tonic-health = "0.9.2"
url = "2.5.0"
vergen = "8.3.1"
zstd = "0.11.2"

## Needed when using accounts-db copy
blake3 = "1.5.0"
bv = "0.11.1"
bytemuck = "1.14.3"
bzip2 = "0.4.4"
dashmap = "5.5.3"
ed25519-dalek = "=1.0.1"
flate2 = "1.0.28"
fnv = "1.0.7"
im = "15.1.0"
index_list = "0.2.11"
indexmap = "2.2.3"
lz4 = "1.24.0"
memmap2 = "0.5.10"
memoffset = "0.9"
modular-bitfield = "0.11.2"
num_enum = "0.7.2"
ouroboros = "0.15.6"
qualifier_attr = { version = "0.2.2", default-features = false }
rand_chacha = "0.3.1"
regex = "1.10.3"
seqlock = "0.2.0"
smallvec = "1.13.1"
solana-bucket-map = { version = "2.1.11" }
solana-config-program = { version = "2.1.11" }
solana-nohash-hasher = "0.2.1"
solana-stake-program = { version = "2.1.11" }
solana-vote-program = { version = "2.1.11" }
static_assertions = "1.1.0"
tar = "0.4.40"
test-case = "3.3.1"

[patch.crates-io]
solana-storage-proto = { path = "./storage-proto" }
# prost = { git = "https://github.com/tokio-rs/prost.git", rev = "e617832" }

# [patch.crates-io]
# solana-accounts-db = { path = "../agave/accounts-db" }
# # This one we just copied in order to match the prost version
# solana-storage-proto = { path = "./solana/storage-proto" }

# [patch.crates-io]
# We include the following crates as our dependencies above from crates.io:
#
#  * spl-associated-token-account
#  * spl-instruction-padding
#  * spl-memo
#  * spl-pod
#  * spl-token
#  * spl-token-2022
#  * spl-token-metadata-interface
#
# They, in turn, depend on a number of crates that we also include directly
# using `path` specifications.  For example, `spl-token` depends on
# `solana-program`.  And we explicitly specify `solana-program` above as a local
# path dependency:
#
#     solana-program = { path = "../../sdk/program", version = "=1.16.0" }
#
# Unfortunately, Cargo will try to resolve the `spl-token` `solana-program`
# dependency only using what is available on crates.io.  Crates.io normally
# contains a previous version of these crates, and we end up with two versions
# of `solana-program` and `solana-zk-token-sdk` and all of their dependencies in
# our build tree.
#
# If you are developing downstream using non-crates-io solana-program (local or
# forked repo, or from github rev, eg), duplicate the following patch statements
# in your Cargo.toml. If you still hit duplicate-type errors with the patch
# statements in place, run `cargo update -p solana-program` and/or `cargo update
# -p solana-zk-token-sdk` to remove extraneous versions from your Cargo.lock
# file.
#
# There is a similar override in `programs/sbf/Cargo.toml`.  Please keep both
# comments and the overrides in sync.

# NOTE: in our case we don't have these crates locally, but need to ensure to point
# to the compatible versions on github
# solana-program = { version = "2.1.11" }
# solana-zk-token-sdk = { version = "2.1.11" }
