[profile.release-with-debug]
inherits = "release"
debug = true
split-debuginfo = "packed"

[workspace]
members = [
  "programs/magicblock",
  "magicblock-account-cloner",
  "magicblock-account-dumper",
  "magicblock-account-fetcher",
  "magicblock-account-updates",
  "magicblock-accounts",
  "magicblock-accounts-api",
  "magicblock-accounts-db",
  "magicblock-api",
  "magicblock-bank",
  "magicblock-config",
  "magicblock-core",
  "magicblock-geyser-plugin",
  "magicblock-ledger",
  "magicblock-metrics",
  "magicblock-mutator",
  "magicblock-perf-service",
  "magicblock-processor",
  "magicblock-pubsub",
  "magicblock-rpc",
  "magicblock-tokens",
  "magicblock-transaction-status",
  "magicblock-version",
  "test-bins",
  "test-tools",
  "test-tools-core",
  "utils/expiring-hashmap",
  "tools/genx",
  "tools/keypair-base58",
  "tools/ledger-stats",
]

# This prevents a Travis CI error when building for Windows.
resolver = "2"

[workspace.package]
# Solana Version (2.2.x)
version = "0.1.1"
authors = ["MagicBlock Maintainers <maintainers@magicblock.xyz>"]
repository = "https://github.com/magicblock-labs/ephemeral-validator"
homepage = "https://www.magicblock.xyz"
license = "Business Source License 1.1"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.86"
assert_matches = "1.5.0"
async-trait = "0.1.77"
base64 = "0.21.7"
bincode = "1.3.3"
bs58 = "0.4.0"
byteorder = "1.5.0"
cargo-lock = "10.0.0"
expiring-hashmap = { path = "./utils/expiring-hashmap" }
conjunto-transwise = { git = "https://github.com/magicblock-labs/conjunto.git", rev = "bf82b45" }
console-subscriber = "0.2.0"
isocountry = "0.3.2"
crossbeam-channel = "0.5.11"
enum-iterator = "1.5.0"
env_logger = "0.11.2"
magic-domain-program = { git = "https://github.com/magicblock-labs/magic-domain-program.git", rev = "eba7644", default-features = false}
magicblock-delegation-program = { git = "https://github.com/magicblock-labs/delegation-program.git", rev = "4af7f1c" }
fd-lock = "4.0.2"
fs_extra = "1.3.0"
futures-util = "0.3.30"
geyser-grpc-proto = { path = "./geyser-grpc-proto" }
git-version = "0.3.9"
hostname = "0.4.0"
http-body-util = "0.1.2"
hyper = "1.4.1"
hyper-util = "0.1.9"
itertools = "0.14"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-pubsub = "18.0.0"
jsonrpc-ws-server = "18.0.0"
lazy_static = "1.4.0"
libc = "0.2.153"
libloading = "0.7.4"
log = "0.4.20"
num_cpus = "1.16.0"
num-derive = "0.4"
num-format = "0.4.4"
num-traits = "0.2"
paste = "1.0"
prometheus = "0.13.4"
# Needs to match https://crates.io/crates/solana-storage-bigtable/2.1.13/dependencies
prost = "0.11.9"
rand = "0.8.5"
rayon = "1.10.0"
rustc_version = "0.4"
semver = "1.0.22"
serde = "1.0.217"
serde_derive = "1.0"
serde_json = "1.0"
magicblock-account-cloner = { path = "./magicblock-account-cloner" }
magicblock-account-dumper = { path = "./magicblock-account-dumper" }
magicblock-account-fetcher = { path = "./magicblock-account-fetcher" }
magicblock-account-updates = { path = "./magicblock-account-updates" }
magicblock-accounts = { path = "./magicblock-accounts" }
magicblock-accounts-api = { path = "./magicblock-accounts-api" }
magicblock-accounts-db = { path = "./magicblock-accounts-db" }
magicblock-api = { path = "./magicblock-api" }
magicblock-bank = { path = "./magicblock-bank" }
magicblock-config = { path = "./magicblock-config" }
magicblock-core = { path = "./magicblock-core" }
magicblock-geyser-plugin = { path = "./magicblock-geyser-plugin" }
magicblock-ledger = { path = "./magicblock-ledger" }
magicblock-metrics = { path = "./magicblock-metrics" }
magicblock-mutator = { path = "./magicblock-mutator" }
magicblock-perf-service = { path = "./magicblock-perf-service" }
magicblock-processor = { path = "./magicblock-processor" }
magicblock-program = { path = "./programs/magicblock" }
magicblock-pubsub = { path = "./magicblock-pubsub" }
magicblock-rpc = { path = "./magicblock-rpc" }
magicblock-tokens = { path = "./magicblock-tokens" }
magicblock-transaction-status = { path = "./magicblock-transaction-status" }
magicblock-version = { path = "./magicblock-version" }
protobuf-src = "1.1"
solana-account = { git = "https://github.com/magicblock-labs/solana-account.git", rev = "7bdfefc" }
solana-accounts-db = { version = "2.2" }
solana-account-decoder = { version = "2.2" }
solana-address-lookup-table-program = { version = "2.2" }
solana-bpf-loader-program = { version = "2.2" }
solana-compute-budget-program = { version = "2.2" }
solana-compute-budget-instruction = { version = "2.2" }
solana-cost-model = { version = "2.2" }
solana-frozen-abi-macro = { version = "2.2" }
solana-geyser-plugin-interface = { version = "2.2", package = "agave-geyser-plugin-interface" }
solana-geyser-plugin-manager = { version = "2.2" }
solana-inline-spl = { version = "2.2" }
solana-log-collector = { version = "2.2" }
solana-measure = { version = "2.2" }
solana-metrics = { version = "2.2" }
solana-perf = { version = "2.2" }
solana-program-runtime = { version = "2.2" }
solana-pubkey = { version = "2.2" }
solana-rayon-threadlimit = { version = "2.2" }
solana-pubsub-client = { version = "2.2" }
solana-rpc = "2.2"
solana-rpc-client = { version = "2.2" }
solana-rpc-client-api = { version = "2.2" }
solana-sdk = { version = "2.2" }
solana-svm = { version = "2.2", features = [ "dev-context-only-utils" ] }
solana-svm-transaction = { version = "2.2" }
solana-storage-proto = { path = "storage-proto" }
solana-system-program = { version = "2.2" }
solana-timings = "2.2"
solana-transaction-status = { version = "2.2" }
spl-token = "=7.0"
spl-token-2022 = "=6.0"
strum = "0.24"
strum_macros = "0.24"
tempfile = "3.10.1"
test-tools = { path = "./test-tools" }
test-tools-core = { path = "./test-tools-core" }
thiserror = "1.0.57"
toml = "0.8.13"
# Update solana-tokio patch below when updating this version
tokio = "1.0"
tokio-stream = "0.1.15"
tokio-util = "0.7.10"
# Tonic version 11 conflicts with lower level deps of solana and 0.9.x is the last
# version that allows prost 0.11.x to be used
tonic = "0.9.2"
tonic-build = "0.9.2"
tonic-health = "0.9.2"
url = "2.5.0"
vergen = "8.3.1"

[patch.crates-io]
# some solana dependencies have solana-storage-proto as dependency
# we need to patch them with our version, because they use protobuf-src v1.1.0
# and we use protobuf-src v2.1.1. Otherwise compilation fails
solana-storage-proto = { path = "./storage-proto" }
solana-account = { git = "https://github.com/magicblock-labs/solana-account.git", rev = "7bdfefc" }
