[package]
name = "magicblock-account-dumper"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
magicblock-bank = { workspace = true }
magicblock-mutator = { workspace = true }
magicblock-processor = { workspace = true }
magicblock-transaction-status = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
