[package]
name = "magicblock-accounts-api"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
magicblock-bank = { workspace = true }
solana-sdk = { workspace = true }

[dev-dependencies]
