[package]
name = "magicblock-config"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
url = { workspace = true, features = ["serde"] }
strum_macros = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
test-tools-core = { workspace = true }
