[package]
name = "magicblock-ledger"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bincode = { workspace = true }
log = { workspace = true }
byteorder = { workspace = true }
fs_extra = { workspace = true }
libc = { workspace = true }
num_cpus = { workspace = true }
num-format = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
magicblock-bank = { workspace = true }
magicblock-accounts-db = { workspace = true }
magicblock-core = { workspace = true }
solana-account-decoder = { workspace = true }
solana-measure = { workspace = true }
solana-metrics = { workspace = true }
solana-sdk = { workspace = true }
solana-svm = { workspace = true }
solana-timings = { workspace = true }
solana-storage-proto = { workspace = true }
solana-transaction-status = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[dependencies.rocksdb]
# Avoid the vendored bzip2 within rocksdb-sys that can cause linker conflicts
# when also using the bzip2 crate
version = "0.22.0"
default-features = false
features = ["lz4"]

[dev-dependencies]
tempfile = { workspace = true }
test-tools-core = { workspace = true }

[build-dependencies]

[lib]
doctest = false
